<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">TEAM A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="team_b">TEAM B</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset">RESET</string>
    <string name="free_throw">Free Throw</string>
</resources>