<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
      >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:padding="24dp"
                />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/_0"
                android:gravity="center_horizontal"
                android:padding="4dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_points"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="#FF8C00"
                android:layout_margin="16dp"
                android:onClick="addThreeForTeamA"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_points"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:background="#FF8C00"
                android:layout_margin="16dp"
                android:onClick="addTwoForTeamA"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:textSize="16sp"
                android:background="#FF8C00"
                android:textAllCaps="false"
                android:layout_margin="16dp"
                android:onClick="addFreeForTeamA"
                />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A9A9A9"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:padding="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/_0"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:id="@+id/team_b_score"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_points"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="#FF8C00"
                android:layout_margin="16dp"
                android:onClick="addThreeForTeamB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_points"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:background="#FF8C00"
                android:layout_margin="16dp"
                android:onClick="addTwoForTeamB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:textSize="16sp"
                android:background="#FF8C00"
                android:textAllCaps="false"
                android:layout_margin="16dp"
                android:onClick="addFreeForTeamB"
                />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:onClick="reset"
        />



</LinearLayout>